<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:hint="@string/user" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userPassword"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:onClick="onCreateUser" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userPasswordConfirm"
        android:layout_below="@+id/userPassword"
        android:layout_centerHorizontal="true"
        android:hint="@string/confirm"
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        android:id="@+id/confirmButton"
        android:layout_below="@+id/userPasswordConfirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:onClick="onCreateUser" />

</RelativeLayout>