<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/game_title"
        android:id="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/ostrich"
        android:contentDescription="@string/ostrich"
        android:clickable="false"
        android:cropToPadding="false"
        android:adjustViewBounds="true"
        android:maxHeight="200dp"
        android:baselineAlignBottom="false"
        android:paddingTop="50dp"
        android:layout_centerHorizontal="true"
        android:minHeight="180dp"
        android:scaleType="centerInside" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
        android:id="@+id/linearLayout2"
        android:paddingTop="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight=".25"
            android:id="@+id/frameLayout" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:layout_gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/user"
                android:id="@+id/userName"
                android:layout_margin="0dp"
                android:textSize="20sp"
                android:paddingBottom="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/password"
                android:id="@+id/password"
                android:layout_margin="0dp"
                android:textSize="20sp"
                android:hint="@string/confirm" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:layout_gravity="center" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/playerName"
                android:layout_gravity="center_horizontal"
                android:hint="@string/user" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/playerPassword"
                android:layout_gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight=".25"
            android:id="@+id/frameLayout2" />

    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rememberMe"
        android:id="@+id/rememberMe"
        android:layout_above="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:checked="false"
        android:nestedScrollingEnabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:onClick="onLogin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        android:id="@+id/createAccount"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:onClick="onCreateAccount" />

</RelativeLayout>